@@ -36,13 +36,13 @@ public class SchedulerService {
     }
 
     public void checkRequests() {
-        List<CallRequest> requestList = new ArrayList<>();
+        List<CallRequest> activeRequests = new ArrayList<>();
         if (callRequestRepository.findAll().iterator().hasNext()) {
             callRequestRepository.findAll().forEach(request -> {
-                if (request.isActive()) requestList.add(request);
+                if (request.isActive()) activeRequests.add(request);
             });
             try {
-                scheduleNotification(requestList.stream().sorted().collect(Collectors.toList()).get(0));
+                scheduleNotification(activeRequests.stream().sorted().toList());
             } catch (IndexOutOfBoundsException ignored) {
             }
         }
@@ -50,30 +50,31 @@ public class SchedulerService {
 
     public void checkNewRequest(CallRequest request) {
         if (request.isActive()) {
-            scheduleNotification(request);
+            scheduleNotification(List.of(request));
         }
     }
 
     @Async("threadPoolTaskExecutor")
-    private void scheduleNotification(CallRequest request) {
+    private void scheduleNotification(List<CallRequest> activeRequests) {
+
         ZonedDateTime now = ZonedDateTime.now(ZoneId.of("Europe/Moscow"));
-        var yearsToAdd = request.getDateTime().getYear() - now.getYear();
-        var monthsToAdd = request.getDateTime().getMonthValue() - now.getMonthValue();
-        var daysToAdd = request.getDateTime().getDayOfYear() - now.getDayOfYear();
-        var hoursToAdd = request.getHours() - now.getHour();
-        var minutesToAdd = request.getMinutes() - now.getMinute() - 1;
+        var yearsToAdd = activeRequests.get(0).getDateTime().getYear() - now.getYear();
+        var monthsToAdd = activeRequests.get(0).getDateTime().getMonthValue() - now.getMonthValue();
+        var daysToAdd = activeRequests.get(0).getDateTime().getDayOfYear() - now.getDayOfYear();
+        var hoursToAdd = activeRequests.get(0).getHours() - now.getHour();
+        var minutesToAdd = activeRequests.get(0).getMinutes() - now.getMinute() - 1;
         ZonedDateTime nextRun = now.plusYears(yearsToAdd).plusMonths(monthsToAdd).plusDays(daysToAdd).plusHours(hoursToAdd).plusMinutes(minutesToAdd);
         Duration duration = Duration.between(now, nextRun);
         long delay = duration.getSeconds();
 
         ScheduledExecutorService executorService = Executors.newScheduledThreadPool(1);
-        Runnable notificationTask = () -> {
+        Runnable notificationTask = () -> activeRequests.forEach(request -> {
             request.setActive(false);
             notificationService.notify(request, "scheduledRequest");
             callRequestRepository.save(request);
             checkRequests();
-        };
-        System.out.println("Напоминание запланировано через " + yearsToAdd + " лет " + monthsToAdd + " месяцев " + daysToAdd + " дней " + hoursToAdd + " часов " + minutesToAdd + " минут");
+        });
+        //System.out.println("Напоминание запланировано через " + yearsToAdd + " лет " + monthsToAdd + " месяцев " + daysToAdd + " дней " + hoursToAdd + " часов " + minutesToAdd + " минут");
         executorService.schedule(notificationTask, delay, TimeUnit.SECONDS);
     }
 }
